# elevator-simulator

./: .gitignore  2025-03-31-elevator-game.md  README.md  pyproject.toml
agents/: base.py  utils.py
agents/classical/: fcfs.py  look.py  scan.py
agents/classical/tests/: test_fcfs_agent.py  test_scan_agent.py
agents/rl/: __init__.py  action_embedding.py  elevator_nn.py  rl_agent.py
environments/: elevator.py  elevator_environment.py  workload_scenario.py
simulation/: evaluate.py  run.py
training/: gae_utils.py  imitation.py  ppo_trainer.py  train_rl.py
